--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "template",
-  "homepage": "https://KirillLutsenko.github.io/template",
+  "name": "demo-gohard",
+  "homepage": "https://KirillLutsenko.github.io/demo-gohard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^3.2.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
